[gd_scene load_steps=3 format=3 uid="uid://xoeanm8yy3bp"]

[ext_resource type="Script" path="res://Attacks/meleeProjectile.gd" id="1_fn5ko"]
[ext_resource type="PackedScene" uid="uid://ddhpvif8ronsj" path="res://Utlity/hitbox.tscn" id="2_oejre"]

[node name="meleeProjectile" type="Node2D"]
script = ExtResource("1_fn5ko")

[node name="flightTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="HitBox" parent="." instance=ExtResource("2_oejre")]
collision_layer = 4
collision_mask = 4

[connection signal="timeout" from="flightTimer" to="." method="_on_flight_timer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]

[editable path="HitBox"]
